I fixed lile spacing

--- a/styles.css
+++ b/styles.css
@@ -470,7 +470,7 @@ header .slideshow button{
 	}
 }
 
-p{
+.location{
 	margin-top: 30px;
 	font-family: ""Courier New", Courier, monospace";
 	line-height: 60px;
